--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
     <p>Withdrawals are processed manually by admin</p>
   </section>  <section class="section" id="contact">
     <h3>Support & Contact</h3>
-    <p>📧 Email: support@win365.com</p>
-    <p>📞 WhatsApp: +91-XXXXXXXXXX</p>
-    <p>We're here to help 10 AM – 8 PM every day</p>
+    <p>📧 Email: dp7814616@gmail.com</p>
+    <p>📞 WhatsApp: +91-7724941807</p>
+    <p>We're here to help 24*7 every day</p>
   </section>  <footer>
     <p>&copy; 2025 Win365. All rights reserved.</p>
   </footer>
